@@ -8099,3 +8099,6 @@ EPRINTS-3.1-beta-2
 2009-03-25 tdb
  * Include the XHTML namespace in HTML output
 
+2009-03-26 tdb
+ * Share fields between inbox/buffer/archive/deletion (stored in eprint)
+
